--- a/tex/library.bib
+++ b/tex/library.bib
@@ -15,7 +15,7 @@
   publisher = {{U.S Environmental Protection Agency}},
   urldate = {2018-05-31},
   date = {2012-07-11},
-  keywords = {EPA,Indianapolis duplex,Radon,Seasonal variation,Vapor intrusion,VOC},
+  keywords = {EPA,Vapor intrusion,Indianapolis duplex,Radon,Seasonal variation,VOC},
   author = {Schumacher, B. and Zimmerman, J. H. and Truesdale, R. and Lutes, Christopher C.},
   file = {/home/jonathan/lib/Zotero/storage/ABS6CUQN/Schumacher et al. - 2012 - Fluctuation of Indoor Radon and VOC Concentrations.PDF},
   note = {00002}
@@ -280,6 +280,24 @@
   note = {00019}
 }
 
+@article{holton_long-term_2015,
+  title = {Long-{{Term Evaluation}} of the {{Controlled Pressure Method}} for {{Assessment}} of the {{Vapor Intrusion Pathway}}},
+  volume = {49},
+  issn = {0013-936X},
+  url = {http://dx.doi.org/10.1021/es5052342},
+  doi = {10/f64j45},
+  abstract = {Vapor intrusion (VI) investigations often require sampling of indoor air for evaluating occupant risks, but can be confounded by temporal variability and the presence of indoor sources. Controlled pressure methods (CPM) have been proposed as an alternative, but temporal variability of CPM results and whether they are indicative of impacts under natural conditions have not been rigorously investigated. This study is the first involving a long-term CPM test at a house having a multiyear high temporal resolution indoor air data set under natural conditions. Key observations include (a) CPM results exhibited low temporal variability, (b) false-negative results were not obtained, (c) the indoor air concentrations were similar to the maximum concentrations under natural conditions, and (d) results exceeded long-term average concentrations and emission rates under natural conditions by 1–2 orders of magnitude. Thus, the CPM results were a reliable indicator of VI occurrence and worst-case exposure regardless of day or time of year of the CPM test.},
+  number = {4},
+  journaltitle = {Environ. Sci. Technol.},
+  urldate = {2018-01-23},
+  date = {2015-02-17},
+  pages = {2091-2098},
+  keywords = {Vapor intrusion,Controlled pressure method,Hill AFB},
+  author = {Holton, Chase and Guo, Yuanming and Luo, Hong and Dahlen, Paul and Gorder, Kyle and Dettenmaier, Erik and Johnson, Paul C.},
+  file = {/home/jonathan/lib/Zotero/storage/625DWAQB/figure3.tar;/home/jonathan/lib/Zotero/storage/FPIZJ2RD/figure2.tar;/home/jonathan/lib/Zotero/storage/G7KCLTQT/Holton et al. - 2015 - Long-Term Evaluation of the Controlled Pressure Me.pdf;/home/jonathan/lib/Zotero/storage/UTU3PYPS/Holton et al. - 2015 - Long-Term Evaluation of the Controlled Pressure Method for Assessment of the Vapor Intrusion Pathway.pdf;/home/jonathan/lib/Zotero/storage/XKUC6M6P/figure4.tar;/home/jonathan/lib/Zotero/storage/56XV3G9L/es5052342.html},
+  note = {00009}
+}
+
 @article{johnston_spatiotemporal_2014,
   langid = {english},
   title = {Spatiotemporal Variability of Tetrachloroethylene in Residential Indoor Air Due to Vapor Intrusion: A Longitudinal, Community-Based Study},
@@ -373,7 +391,7 @@ WOS:000325689400005}
   note = {00037}
 }
 
-@article{nielsen_remediation_2017-1,
+@article{nielsen_remediation_2017,
   langid = {english},
   title = {Remediation Techniques for Mitigating Vapor Intrusion from Sewer Systems to Indoor Air},
   volume = {27},
@@ -386,7 +404,7 @@ WOS:000325689400005}
   urldate = {2018-07-19},
   date = {2017-06-07},
   pages = {67-73},
-  keywords = {Controlled pressure method,Preferential pathway,Remediation,Sampling methods,Sewer,Sewer systems,Vapor intrusion},
+  keywords = {Vapor intrusion,Controlled pressure method,Preferential pathway,Sewer,Remediation,Sampling methods,Sewer systems},
   author = {Nielsen, Karin Birn and Hvidberg, Boerge},
   file = {/home/jonathan/lib/Zotero/storage/KS72RYNZ/Nielsen and Hvidberg - Remediation techniques for mitigating vapor intrus.pdf;/home/jonathan/lib/Zotero/storage/LJNP7FNN/Nielsen, Hvidberg - 2017 - Remediation techniques for mitigating vapor intrusion from sewer systems to indoor air.pdf;/home/jonathan/lib/Zotero/storage/9S4CH3ZA/rem.html},
   note = {00002}
@@ -559,7 +577,7 @@ WOS:000325689400005}
   urldate = {2018-07-16},
   date = {2018-03-01},
   pages = {1149-1162},
-  keywords = {Preferential pathway,Sampling methods,Sewer,Sewer systems,Spatial variability,Temporal variability,Trichloroethylene,Vapor intrusion},
+  keywords = {Vapor intrusion,Spatial variability,Temporal variability,Preferential pathway,Sewer,Sampling methods,Sewer systems,Trichloroethylene},
   author = {Roghani, Mohammadyousef and Jacobs, Olivia P. and Miller, Anthony and Willett, Evan J. and Jacobs, James A. and Viteri, C. Ricardo and Shirazi, Elham and Pennell, Kelly G.},
   file = {/home/jonathan/lib/Zotero/storage/HD77KLVB/Roghani et al. - 2018 - Occurrence of chlorinated volatile organic compoun.pdf;/home/jonathan/lib/Zotero/storage/FJSQREUV/S0048969717329236.html},
   note = {00002}
