--- a/tex/main.tex
+++ b/tex/main.tex
@@ -45,6 +45,8 @@
 
 \section{Introduction}
 
+The significant temporal varibility in indoor air contaminant concentrations 
+
 \section{Methods}
 
 \subsection{Statistical Analysis of Field Data}
@@ -52,7 +54,7 @@
 This paper heavily relies on statistical analysis of high resolution datasets from two well-studied VI sites, one near Hill AFB in Utah (called the ASU house) and another in Indianapolis, IN (simply called as such.)
 Analysis is performed using the SciPy, NumPy, Pandas, and Seaborn Python packages.
 
-Probability distributions of various parameters are constructed using the kernel density estimation (KDE) method\cite{altman_introduction_1992}, which is implemented in the SciPy package. 
+Probability distributions of various parameters are constructed using the kernel density estimation (KDE) method\cite{altman_introduction_1992}, which is implemented in the SciPy package.
 
 \subsection{Temporal Variability of Indoor Air Contaminant Concentration}
 
