--- a/tex/main.tex
+++ b/tex/main.tex
@@ -122,45 +122,11 @@ The distributions of the individual parameters and the relationship between them
 
 
 \begin{figure}[!h]
-	\centering
-	\begin{minipage}[c]{0.49\textwidth}
 		\centering
     \caption{ }
-    \label{fig:asu_phase}
-    \includegraphics[width=\textwidth]{asu_phase.pdf}
-	\end{minipage}
-	%\hspace{3cm}
-	\begin{minipage}[c]{0.49\textwidth}
-		\centering
-    \caption{ }
-    \label{fig:indianapolis_species}
-    \includegraphics[width=\textwidth]{indianapolis_species.pdf}
-	\end{minipage}
+    \label{fig:pair_grid}
+    \includegraphics[width=\textwidth]{simple_grid.pdf}
 \end{figure}
-
-
-\subsection{Seasonal Variability}
-
-\begin{figure}[htb!]
-  \caption{ }
-  \label{fig:seasonal_analysis}
-  % ASU/North Island plot
-  \begin{subfigure}{0.49\textwidth}
-    \centering
-    \caption{ }
-    \label{fig:seasonal_analysis_asu}
-    \includegraphics[width=\textwidth]{asu_closed_season.pdf}
-  \end{subfigure}
-  % Indianapolis plot
-  \begin{subfigure}{0.49\textwidth}
-    \centering
-    \caption{ }
-    \label{fig:seasonal_analysis_indianapolis}
-    \includegraphics[width=\textwidth]{indianapolis_pce_season.pdf}
-  \end{subfigure}
-\end{figure}
-
-\subsection{Maximum Change in Indoor Air Contaminant Concentration}
 
 \begin{figure}[!h]
 	\centering
@@ -191,14 +157,14 @@ The distributions of the individual parameters and the relationship between them
     \centering
     \caption{ }
     \label{fig:simulation_sampling_pp_open}
-    \includegraphics[width=\textwidth]{sampling_simulation_pp_open.pdf}
+    \includegraphics[width=\textwidth]{simulation_prediction_span_open.pdf}
   \end{subfigure}
   % Indianapolis plot
   \begin{subfigure}{0.49\textwidth}
     \centering
     \caption{ }
     \label{fig:simulation_sampling_pp_closed}
-    \includegraphics[width=\textwidth]{sampling_simulation_pp_closed.pdf}
+    \includegraphics[width=\textwidth]{simulation_prediction_span_closed.pdf}
   \end{subfigure}
 \end{figure}
 
